<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_main"
    android:backgroundTint="@color/black_main"
    android:foregroundTint="@color/black_main"
    tools:context=".ui.fragment.menu.MainMenuFragment">
    <!--        android:background="@drawable/ezik"-->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:divider="@drawable/buttons_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradeint_button2">

            <TextView
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="3dp"

                android:background="@color/black_main"
                android:gravity="center"
                android:text="menu"
                android:textColor="#FFFFFF"
                android:textSize="32sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/gradeint_button2">

            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@color/black_main"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/Instruction"
                android:textColor="#FBFBFB"
                android:textSize="32sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradeint_button2">

            <TextView
                android:id="@+id/leaderboards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"

                android:background="@color/black_main"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/Leaderboard"
                android:textColor="#FFFFFF"
                android:textSize="32sp" />
        </FrameLayout>

        <!--            android:background="@drawable/ezik"-->


    </LinearLayout>

    <ImageButton
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black_main"
        android:src="@drawable/sound_off"
        android:text="@string/muzyka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/translation"
        android:textColor="#B83737"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music" />

</androidx.constraintlayout.widget.ConstraintLayout>